feat: add admin connection share API
